@@ -1,5 +1,6 @@
 Changes for 1.8.12rc1
 
+....I..... [ZBX-3929] removed deprecated Switch module from a gen.pl script (Sasha)
 ...GI..... [ZBXNEXT-584] added support of multiple server in active check mode; thanks to Takanori Suzuki (Sasha)
 ...G...... [ZBX-4635] added support for optional first parameter to vfs.dev.* on Solaris (dimir)
 ..F....... [ZBX-4795] fixed group creation for child nodes (Vedmak)
